tests/codegen/fail/unsupported_cleanup_build.ql
extern "c" fn first()

fn main() -> Int {
    defer first()
    return 0
}
